<resources>
    <string name="app_name">Union</string>

    <!-- Navigation Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_show_members">Leden</string>
    <string name="menu_add_member">Voeg lid toe</string>
    <string name="menu_logout">Meld af</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="showMembers">Leden</string>
    <string name="insertMember">Voeg lid toe</string>
    <string name="logout">Meld af</string>
    <string name="action_settings">Instellingen</string>

    <!-- InsertFragment -->
    <string name="firstname">Voornaam</string>
    <string name="lastname">Achternaam</string>
    <string name="dateSelector">Selecteer geboortedatum</string>
    <string name="birthdate">Geboortedatum</string>
    <string name="address">Straat + huisnummer</string>
    <string name="postcalCode">Postcode</string>
    <string name="city">Gemeente</string>
    <string name="telephone">Telefoonnummer (bijv. 012345678)</string>
    <string name="instrument">Instrument</string>
    <string name="register">Voeg toe</string>
    <string name="back">Ga terug</string>
    <string name="imageSelector">Selecteer \nprofielfoto</string>

    <!-- SingUpActivity & LoginActivity -->
    <string name="email">E-mailadres</string>
    <string name="password">Wachtwoord</string>
    <string name="signUp">Maak account</string>
    <string name="login">Meld aan</string>
    <string name="alreadyAccount">Al een account? Meld je hier aan</string>
    <string name="noAccount">Nog geen account? Klik hier</string>
    <string name="rememberMe">Onthoud gebruikersnaam en wachtwoord</string>

    <!-- HomeFragment -->
    <string name="welcome">Welkom bij</string>

    <!-- LogoutFragment -->
    <string name="loggingout">Je wordt afgemeld.</string>
    <string name="goodbye">Tot de volgende keer!</string>

    <!-- DetailActivity -->
    <string name="detail_firstname">Voornaam</string>
    <string name="detail_lastname">Achternaam</string>
    <string name="detail_birthdate">Geboortedatum</string>
    <string name="detail_address">Straat + huisnummer</string>
    <string name="detail_postalCode">Postcode</string>
    <string name="detail_city">Gemeente</string>
    <string name="detail_telephone">Telefoonnummer</string>
    <string name="detail_instrument">Instrument</string>
    <string name="button_back">Ga terug</string>
    <string name="button_update">Wijzig</string>
    <string name="button_delete">Verwijder</string>
    <string name="dummyData">Dummy</string>
    <string name="chooseMember">Kies een lid waarvan je de gegevens wilt bekijken.</string>

    <!-- UpdateActivity -->
    <string name="btnUpdate">Wijzig</string>
    <string name="btnBack">Ga terug</string>

    <!-- Keys voor shared preferences -->
    <string name="preferencesCheckbox">be.pxl.unionapp.checkbox</string>
    <string name="preferencesEmail">be.pxl.unionapp.email</string>
    <string name="preferencesPassword">be.pxl.unionapp.password</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
