<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Knoppen in navigatiebalk | checkableBehavoir: maar één tegelijk aanklikken -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_show_members"
            android:icon="@drawable/ic_menu_show_members"
            android:title="@string/menu_show_members" />
        <item
            android:id="@+id/nav_add_member"
            android:icon="@drawable/ic_menu_add_member"
            android:title="@string/menu_add_member" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
