<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color"
    android:id="@+id/detail_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_firstname_label"
        android:text="@string/detail_firstname"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname_database"
        android:text="@string/detail_firstname"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_lastname_label"
        android:text="@string/detail_lastname"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname_database"
        android:text="@string/detail_lastname"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_birthdate_label"
        android:text="@string/detail_birthdate"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birthdate_database"
        android:text="@string/detail_birthdate"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_address_label"
        android:text="@string/detail_address"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address_database"
        android:text="@string/detail_address"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_postalCode_label"
        android:text="@string/detail_postalCode"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/postalCode_database"
        android:text="@string/detail_postalCode"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_city_label"
        android:text="@string/detail_city"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_database"
        android:text="@string/detail_city"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_telephone_label"
        android:text="@string/detail_telephone"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telephone_database"
        android:text="@string/detail_telephone"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_isntrument_label"
        android:text="@string/detail_instrument"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instrument_database"
        android:text="@string/detail_instrument"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack"
            android:text="@string/button_back"
            android:layout_marginStart="17dp"
            android:layout_marginTop="17dp"
            android:textColor="@color/lightgray"
            android:background="@color/darkblue"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate"
            android:text="@string/button_update"
            android:layout_marginStart="100dp"
            android:layout_marginTop="17dp"
            android:textColor="@color/lightgray"
            android:background="@color/darkblue"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            android:text="@string/button_delete"
            android:layout_marginStart="5dp"
            android:layout_marginTop="17dp"
            android:textColor="@color/lightgray"
            android:background="@color/darkred"/>
    </LinearLayout>
</LinearLayout>