<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <!-- Laadbalk | style: horizontaal (geen rondje) | indeterminate: loopt constant -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <!-- backgrounTint: kleur van de lijn | style: verwijst naar custom style in res/values/styles/styles.xml-->
    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/lightgray"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/lightgray"
        android:textColorHint="@color/lightgray"
        android:textCursorDrawable="@color/lightgray"
        android:textSize="22sp"
        style="@style/editTextDisableEnter"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightgray"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/lightgray"
        android:textColorHint="@color/lightgray"
        android:textCursorDrawable="@color/lightgray"
        android:textSize="22sp"
        style="@style/editTextDisableEnter"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cbRememberMe"
        android:layout_gravity="center"
        android:text="@string/rememberMe"
        android:textColor="@color/lightgray"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/darkblue"
        android:text="@string/login"
        android:textColor="@color/lightgray" />

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/noAccount"
        android:textColor="@color/darkblue"
        android:textSize="14sp" />

</LinearLayout>